# stream_scraper

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: album_union.rs  artist_display.rs  daily_update.rs  data_base.rs  http_requests.rs  lib.rs  main.rs  server.rs  track_union.rs
src/entity/: album.rs  artist.rs  artist_albums.rs  artist_tracks.rs  daily_streams.rs  follower_instance.rs  mikro_orm_migrations.rs  mod.rs  monthly_listeners.rs  prelude.rs  track.rs
src/modules/: album_union.rs  artist_display.rs  data_base.rs  http_requests.rs  mod.rs  track_union.rs
