[package]
name = "streamScrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.29"
sea-orm = { version = "0.12.6", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "with-json"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde-aux = "4.2.0"
