[package]
name = "stream_accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.29"
sea-orm = { version = "0.12.6", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "with-json"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde-aux = "4.2.0"
async-trait = "0.1.74"
serde_json = { version = "1.0.108", features = [] }
chrono = "0.4.31"
async-recursion = "1.0.5"
tokio = { version = "1", features = ["full"] }
